tests/valid_inputs/class_method_mem_access_wo_this.cpp

struct S {
	int a;
	int foo() {
		int res = 0;
		{ int a = 5; res += a; }
		res += a;
		return res;
	}
};

int main() {
	S s;
	s.a = 37;
	return s.foo();
}
