tests/invalid_inputs/sema/def_arg_redefinition_1.cpp


void foo(int a = 5);
void foo(int a = 5);
